--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,11 @@
 {
+    "assistant": {
+        "default_model": {
+            "provider": "anthropic",
+            "model": "claude-3-5-sonnet-20240620"
+        },
+        "version": "2"
+    },
     "tab_bar": {
         "show": true
     },
